352647 fetch fails if URL of Git server does not match Gerrit server
Bug: 352647